# FrustumVolumeCaching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  index.html
dependencies/argparse/argparse/: argparse.hpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/json/json/: LICENSE.MIT
include/: basic_renderer.h  cache.h  cache_basic_renderer.h  cache_performance_renderer.h  cache_renderer.h  common.h  loader.h  mesher.h  my_fully_fused_mlp.h  nerf_network.h  parse_helper.h  performance_renderer.h  raymarch_common.h  renderer.h  renderer_common.h
include/programs/: init_ray_payloads.h  sample_segments.h
include/util/: bmp.h  bmpwriter.h  buffer.h  cub_helper.h  cuda_helper.h  cuda_readwrite_array.h  cuda_timer.h  debug_buffer.h  helper_math.h  helper_math_extension.h  image_buffer.h  mesh.h  owl_device_helper.h  owl_helper.h  pcg32.h  quat.h  random_val.h
realtime_viewer/: CMakeLists.txt
realtime_viewer/include/: application.h  camera_path.h  compile_time_type_information.h  core.h  event.h  event_dispatcher.h  interop_buffer.h  trackball_camera.h  window.h
realtime_viewer/include/events/: keyboard_events.h  mouse_events.h  window_events.h
realtime_viewer/src/: application.cu  camera_path.cu  interop_buffer.cu  realtime_viewer.cu  trackball_camera.cu  window.cu
src/: basic_renderer.cu  cache.cu  cache_basic_renderer.cu  cache_performance_renderer.cu  cache_renderer.cu  eval.cu  loader.cu  mesher.cu  my_fully_fused_mlp.cu  performance_renderer.cu  renderer.cu
src/programs/: init_ray_payloads.cu  sample_segments.cu
src/util/: debug_buffer.cu  image_buffer.cu
static/: steiner2024nerfcaching.bib
static/css/: index.css
static/favicon/: about.txt
test/: video_comparison.js
